--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -119,23 +119,23 @@ traefik_port_ui: "8083"
 ### General
 ###
 # Sets the hostname of your Ansible NAS
-ansible_nas_hostname: ansible-nas
+# ansible_nas_hostname: ubuntu
 
 # Sets the timezone for your Ansible NAS
 # You can find a list here https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
-ansible_nas_timezone: Etc/UTC
+# ansible_nas_timezone: Etc/UTC
 
-# Update all apt packages when playbook is run
-keep_packages_updated: false
+# # Update all apt packages when playbook is run
+# keep_packages_updated: true
 
-# Will be added to the docker group to give user command line access to docker
-ansible_nas_user: david
+# # Will be added to the docker group to give user command line access to docker
+# ansible_nas_user: graeme
 
-# Your email and domain, used for Let's Encrypt SSL certs
-ansible_nas_email: me@example.com
+# # Your email and domain, used for Let's Encrypt SSL certs
+# ansible_nas_email: graeme@graeme.org
 
-# Applications will have subdomain SSL certificates created if Traefik is enabled, e.g. ansible-nas.<your-domain>, nextcloud.<your-domain>
-ansible_nas_domain: example.com
+# # Applications will have subdomain SSL certificates created if Traefik is enabled, e.g. ansible-nas.<your-domain>, nextcloud.<your-domain>
+# ansible_nas_domain: test.graeme.org
 
 ###
 ### Docker
@@ -155,7 +155,7 @@ docker_storage_driver: overlay2
 ###
 # The location where all shares will be created by default. Can be overridden on a per-share basis.
 # This path will be mounted to backup containers, Duplicati
-samba_shares_root: /mnt/Volume3
+samba_shares_root: /media/export
 
 # Where stuff downloaded will be stored
 downloads_root: "{{ samba_shares_root }}/downloads"
@@ -261,13 +261,6 @@ samba_shares:
     browsable: yes
     path: "{{ samba_shares_root }}/books"
 
-  - name: comics
-    comment: 'Comics'
-    guest_ok: yes
-    public: yes
-    writable: yes
-    browsable: yes
-    path: "{{ samba_shares_root }}/comics"
 
 ###
 ### NFS
@@ -276,7 +269,7 @@ samba_shares:
 # https://help.ubuntu.com/community/SettingUpNFSHowTo#Shares
 # WARNING: Weird things might happen if you share the same data over Samba and NFS and allow writes on both!
 
-nfs_shares_root: /mnt/Volume3
+nfs_shares_root: /media/export/
 
 nfs_exports:
   - "{{ nfs_shares_root }}/public *(rw,sync,no_root_squash)"
@@ -797,7 +790,7 @@ bitwarden_admin_token: qwertyuiop1234567890poiuytrewq0987654321
 # To create a user set this to "true", and reprovision the container by re-running the ansible-nas playbook.
 # Once you have created your user, set to "false" and run one more time.
 # Target just Bitwarden by running: ansible-playbook -i inventory nas.yml -b -K -t bitwarden
-bitwarden_allow_signups: false
+bitwarden_allow_signups: "true"
 
 ###
 ### Firefly
