--- a/templates/traefik/traefik.toml
+++ b/templates/traefik/traefik.toml
@@ -169,59 +169,62 @@ onDemand = false # create certificate when container is created
   # provider = "cloudflare"
   # delayBeforeCheck = 0
 
-  # [acme.httpChallenge]
-  # entryPoint = "http"
+  # # [acme.httpChallenge]
+  # # entryPoint = "http"
 
-  [acme.tlsChallenge]
+  # # [acme.tlsChallenge]
 
-  [[acme.domains]]
-  main = "{{ ansible_nas_hostname }}.{{ ansible_nas_domain }}"
+  # [[acme.domains]]
+  # main = "*.{{ ansible_nas_domain }}"
 
+# we request a certificate for everything, because why not.
+  # sans = ["{{ ansible_nas_domain }}"]
+ 
 
   # we request a certificate for everything, because why not.
-  sans = ["airsonic.{{ ansible_nas_domain }}",
-          "bazarr.{{ ansible_nas_domain }}",
-          "bitwarden.{{ ansible_nas_domain }}",
-          "calibre.{{ ansible_nas_domain }}",
-          "cloudcmd.{{ ansible_nas_domain }}",
-          "couchpotato.{{ ansible_nas_domain }}",
-          "duplicati.{{ ansible_nas_domain }}",
-          "emby.{{ ansible_nas_domain }}",
-          "firefly.{{ ansible_nas_domain }}",
-          "gitea.{{ ansible_nas_domain }}",
-          "gitlab.{{ ansible_nas_domain }}",
-          "glances.{{ ansible_nas_domain }}",
-          "grafana.{{ ansible_nas_domain }}",
-          "guacamole.{{ ansible_nas_domain }}",
-          "heimdall.{{ ansible_nas_domain }}",
-          "homeassistant.{{ ansible_nas_domain }}",
-          "jackett.{{ ansible_nas_domain }}",
-          "jellyfin.{{ ansible_nas_domain }}",
-          "joomla.{{ ansible_nas_domain }}",
-          "krusader.{{ ansible_nas_domain }}",
-          "lidarr.{{ ansible_nas_domain }}",
-          "mylar.{{ ansible_nas_domain }}",
-          "miniflux.{{ ansible_nas_domain }}",
-          "netdata.{{ ansible_nas_domain }}",
-          "nextcloud.{{ ansible_nas_domain }}",
-          "nzbget.{{ ansible_nas_domain }}",
-          "ombi.{{ ansible_nas_domain }}",
-          "openhab.{{ ansible_nas_domain }}",
-          "organizr.{{ ansible_nas_domain }}",
-          "plex.{{ ansible_nas_domain }}",
-          "portainer.{{ ansible_nas_domain }}",
-          "pyload.{{ ansible_nas_domain }}",
-          "pytivo.{{ ansible_nas_domain }}",
-          "radarr.{{ ansible_nas_domain }}",
-          "serposcope.{{ ansible_nas_domain }}",
-          "sickchill.{{ ansible_nas_domain }}",
-          "sonarr.{{ ansible_nas_domain }}",
-          "tautulli.{{ ansible_nas_domain }}",
-          "thelounge.{{ ansible_nas_domain }}",
-          "transmission.{{ ansible_nas_domain }}",
-          "transmission-openvpn.{{ ansible_nas_domain }}",
-          "ubooquity.{{ ansible_nas_domain }}",
-          "utorrent.{{ ansible_nas_domain }}",
-          "wallabag.{{ ansible_nas_domain }}",
-          "youtubedlmaterial.{{ ansible_nas_domain }}",
-          "znc.{{ ansible_nas_domain }}"]
+  # sans = ["airsonic.{{ ansible_nas_domain }}",
+  #         "bazarr.{{ ansible_nas_domain }}",
+  #         "bitwarden.{{ ansible_nas_domain }}",
+  #         "calibre.{{ ansible_nas_domain }}",
+  #         "cloudcmd.{{ ansible_nas_domain }}",
+  #         "couchpotato.{{ ansible_nas_domain }}",
+  #         "duplicati.{{ ansible_nas_domain }}",
+  #         "emby.{{ ansible_nas_domain }}",
+  #         "firefly.{{ ansible_nas_domain }}",
+  #         "gitea.{{ ansible_nas_domain }}",
+  #         "gitlab.{{ ansible_nas_domain }}",
+  #         "glances.{{ ansible_nas_domain }}",
+  #         "grafana.{{ ansible_nas_domain }}",
+  #         "guacamole.{{ ansible_nas_domain }}",
+  #         "heimdall.{{ ansible_nas_domain }}",
+  #         "homeassistant.{{ ansible_nas_domain }}",
+  #         "jackett.{{ ansible_nas_domain }}",
+  #         "jellyfin.{{ ansible_nas_domain }}",
+  #         "joomla.{{ ansible_nas_domain }}",
+  #         "krusader.{{ ansible_nas_domain }}",
+  #         "lidarr.{{ ansible_nas_domain }}",
+  #         "mylar.{{ ansible_nas_domain }}",
+  #         "miniflux.{{ ansible_nas_domain }}",
+  #         "netdata.{{ ansible_nas_domain }}",
+  #         "nextcloud.{{ ansible_nas_domain }}",
+  #         "nzbget.{{ ansible_nas_domain }}",
+  #         "ombi.{{ ansible_nas_domain }}",
+  #         "openhab.{{ ansible_nas_domain }}",
+  #         "organizr.{{ ansible_nas_domain }}",
+  #         "plex.{{ ansible_nas_domain }}",
+  #         "portainer.{{ ansible_nas_domain }}",
+  #         "pyload.{{ ansible_nas_domain }}",
+  #         "pytivo.{{ ansible_nas_domain }}",
+  #         "radarr.{{ ansible_nas_domain }}",
+  #         "serposcope.{{ ansible_nas_domain }}",
+  #         "sickchill.{{ ansible_nas_domain }}",
+  #         "sonarr.{{ ansible_nas_domain }}",
+  #         "tautulli.{{ ansible_nas_domain }}",
+  #         "thelounge.{{ ansible_nas_domain }}",
+  #         "transmission.{{ ansible_nas_domain }}",
+  #         "transmission-openvpn.{{ ansible_nas_domain }}",
+  #         "ubooquity.{{ ansible_nas_domain }}",
+  #         "utorrent.{{ ansible_nas_domain }}",
+  #         "wallabag.{{ ansible_nas_domain }}",
+  #         "youtubedlmaterial.{{ ansible_nas_domain }}",
+  #         "znc.{{ ansible_nas_domain }}"]
